--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     <p>Deixa tua marca por onde passas com fragrâncias que encantam,Escolhe o teu agora! </p>
                 </div>
                 <div class="produto">
-                    <img src="imagens/Kit.jpg" alt="Produto 3" />
+                    <img src="Kit.jpg" alt="Produto 3" />
                     <h3>Kit</h3>
                     <p>Cuidado completo para te deixar ainda mais radiante,delicadeza, frescura e beleza num só conjunto .</p>
                 </div>
