--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     content: "";
     position: fixed;
     top: 0; left: 0; right: 0; bottom: 0;
-    background-image: url('imagens/fundo.jpg');
+    background-image: url('fundo.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
