--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="produtos-lista">
                 <!-- Exemplo de produto: substitua as imagens e textos -->
                 <div class="produto">
-                    <img src="imagens/creme.jpg" alt="Produto 1" />
+                    <img src="creme.jpg" alt="Produto 1" />
                     <h3>Cremes</h3>
                     <p></p>
                      <p>Realça tua beleza com cuidado, brilho e suavidade,Garanta já o teu! </p>
