--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                      <p>Realça tua beleza com cuidado, brilho e suavidade,Garanta já o teu! </p>
                 </div>
                 <div class="produto">
-                    <img src="imagens/perfume.jpg" alt="Produto 2" />
+                    <img src="perfume.jpg" alt="Produto 2" />
                     <h3>Perfumes</h3>
                     <p>Deixa tua marca por onde passas com fragrâncias que encantam,Escolhe o teu agora! </p>
                 </div>
