--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </style>
  <body>
   <div id="topo">
-    <img src="logo.png" alt="Logo LallyCosmeticos" style="height: 80px;" />
+    <img src="logotipo.png" alt="Logo LallyCosmeticos" style="height: 80px;" />
   </div>
   <!-- O resto do seu código continua aqui -->
 
