--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             padding: 20px 10px;
             text-align: lefter;
             <header>
-  <img src="Logotipo.png" alt="Logo LallyCosmeticos" style="height: 90px;" />
+  <img src="Logo.png" alt="Logo LallyCosmeticos" style="height: 90px;" />
   <h1>LallyCosmeticos</h1>
   <p>Representante e Venda de Cosméticos</p>
 </header>
